fix: s3/http disambiguation replaces a query with 'max-keys=1'